moved all visually obvious inline color and border elements from the xhtml into the theme css for easier theming. created an alternate test theme called 'reddish' and added alternate stylesheet declaration note: this is not even remotely a re-design ;)  just making what we have easier to theme.

--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -57,6 +57,8 @@
 	contain at least one letter (a-z/A-Z), 
 	and contain at least one number.">
 
+<!ENTITY opac.style.reddish "Reddish">
+
 <!ENTITY holds.where_am_i
 	"PINES is a statewide system with both patrons and items
 	associated with over 250 libraries, holds lists are not as simple as
