Patch from Dan Scott, moving some strings to the OPAC DTD

--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -4,8 +4,10 @@
 <!ENTITY lang.version "remote v1">
 <!ENTITY lang.description "English">
 <!ENTITY lang.author "PINES">
+<!ENTITY common.all "All">
 <!ENTITY common.currency "$">
 <!ENTITY common.name "Name">
+<!ENTITY common.none "None">
 <!ENTITY common.title "Title">
 <!ENTITY common.author "Author">
 <!ENTITY common.authors "Authors">
@@ -24,6 +26,7 @@
 <!ENTITY common.pubdate "Publication Date">
 <!ENTITY common.publisher "Publisher">
 <!ENTITY common.results "Results">
+<!ENTITY common.select "Select">
 <!ENTITY common.status "Status">
 <!ENTITY common.at "at">
 <!ENTITY common.of "of">
@@ -148,6 +151,24 @@ have any link between your patron record and a particular item or items,
 we suggest that you do not place said items in a bookbag or that you 
 avoid using bookbags all together.  Thank you.">
 <!ENTITY myopac.describe.bookbags "Bookbags are...">
+
+<!--	================================================================= 
+	MyOPAC Checked Page 
+	================================================================= -->
+<!ENTITY myopac.checked.out "Total items out:">
+<!ENTITY myopac.checked.overdue "Total items overdue:">
+<!ENTITY myopac.checked.renew "Renew Selected Items">
+<!ENTITY myopac.checked.renewing "Renewing...">
+<!ENTITY myopac.checked.renew.remaining "Renewals Remaining">
+<!ENTITY myopac.checked.noitems "You have no items checked out at this time">
+<!ENTITY myopac.checked.other.circ "Other Circulations">
+<!ENTITY myopac.checked.circ.lib "Circulating Library">
+<!ENTITY myopac.checked.item.type "Circulation Type">
+<!ENTITY myopac.checked.circ.time "Please return by ...">
+<!ENTITY myopac.checked.renew.success "item(s) successfully renewed">
+<!ENTITY myopac.checked.renew.confirm "Are you sure you wish to renew the selected item(s)?">
+<!ENTITY myopac.checked.renew.fail "The system is unable to renew the selected item at this time.  This usually means the item is needed to fulfill a hold.  Please see a librarian for further help.">
+<!ENTITY myopac.checked.renew.fail2 "PINES policy prevents the renewal of this item at this time.  Please see a librarian for further details.">
 
 <!--	================================================================= 
 	MyOPAC Fines Page 
