Patch from Dan Scott to make the slimpac I18N friendly(-ish):
The attached patch enables the slimpac (the accessible, basic HTML
version of the OPAC), to support various translations of the search
forms by reusing the existing opac.dtd.

There are a few extra strings that we'll have to translate for
complete fr-CA support, but it's mostly there.

Note that the search _results_ are not yet i18n-ized; there's a fair
bit of work remaining there (thanks unAPI!). Also note that the method
used here changes the slimpac path from /opac/extras/slimpac/ to
/opac/ll-LL/extras/slimpac/ - although I do, of course, include a
redirect from the old /opac/extras/slimpac/ to
/opac/en-US/extras/slimpac/.

Finally, also note that the locale passing method may be subject to
change, or at least become more flexible, when OpenSRF sessions learn
about locales.

--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -560,7 +560,10 @@ For further information, please consult your local librarian.">
 <!ENTITY common.email.enable "Enable email notifications for this hold?">
 <!ENTITY common.email.none "(Patron has no configured email address)">
 <!ENTITY common.email.set "(See <a class='classic_link' id='holds.no_email.my_account'>My Account</a> for setting your email address)">
+<!ENTITY common.keywords.label "Keywords:">
 <!ENTITY common.physical.label "Physical Description:">
+<!ENTITY common.series.label "Series:">
+<!ENTITY common.subject.label "Subject:">
 <!ENTITY common.title.label "Title:">
 <!ENTITY common.author.label "Author:">
 <!ENTITY common.format.label "Format:">
@@ -583,3 +586,17 @@ You will need to change your password.">
 <!ENTITY login.failed "Login failed. The username or password provided was not valid.
 Ensure Caps-Lock is off and try again or contact your local library.">
 <!ENTITY button.go "Go!">
+
+<!--	================================================================= 
+	Slimpac Simple Search
+	================================================================= -->
+<!ENTITY slimpac.start.title "Simple Search">
+<!ENTITY slimpac.start.nowSearching "Now searching: ">
+<!ENTITY slimpac.start.dynamic "Dynamic Catalog">
+
+<!--	================================================================= 
+	Slimpac Advanced Search
+	================================================================= -->
+<!ENTITY slimpac.advanced.language "Item Language">
+<!ENTITY slimpac.advanced.create_date "Record Creation Date">
+<!ENTITY slimpac.advanced.edit_date "Record Edit Date">
