an URL got translated ... oops.

--- a/Open-ILS/web/opac/locale/fr-CA/opac.dtd
+++ b/Open-ILS/web/opac/locale/fr-CA/opac.dtd
@@ -91,7 +91,7 @@ Cependant, il semble que JavaScript soit désactivé ou qu'il soit incompatible 
 Pour utiliser le catalogue Evergreen ordinaire, activez JavaScript en changeant les options de votre navigateur, puis
 <a style='couleur : bleu; décoration du texte : souligné;' href='/'>essayez de nouveau</a>.
 <br/><br/>Sinon, vous pouvez utiliser le catalogue de base en version HTML-seulement
-<a style='couleur : bleu; décoration du texte : souligné;' href='/opac/extras/slimpac/démarrer.html'>ici</a>.">
+<a style='couleur : bleu; décoration du texte : souligné;' href='/opac/extras/slimpac/start.html'>ici</a>.">
 
 <!--	================================================================= 
 	 MyOPAC bookbag page
