Patch from Dan Scott which starts the process of proper staff client internationalization:
As documented at
http://developer.mozilla.org/en/docs/XUL_Tutorial:Property_Files ,
string bundles are the normal method for holding translatable text
from Javascript files in XULRunner applications. The staff client
currently does not use string bundles; it currently uses a mix of
hardcoded strings, with reliance on some of the strings that are
converted from lang.dtd into the massive hash that is lang.js.

This patch hopes to start changing that, by introducing string bundles
for a few small parts of the staff client -- hopefully paving the way
for conversion of more of the client to stringbundles and i18n glory.

1) We create one .properties file per chrome/content/ subdirectory
that we're converting to string bundles, plus a common.properties file
for common strings like error messages. In this patch, I address the
chrome/content/admin/ and chrome/content/cat/ directories; therefore,
I add:
 * Open-ILS/xul/staff_client/chrome/locale/en-US/admin.properties
 * Open-ILS/xul/staff_client/chrome/locale/en-US/cat.properties
 * Open-ILS/xul/staff_client/chrome/locale/en-US/common.properties

2) Note that the files are being added to a directory that does not
currently exist in the Subversion repository. It doesn't make sense to
serve the properties files remotely from the web/locale/en-US/
directory, as their real home is the chrome. So that's where I've
stuck them. Accordingly, the xul/staff_client/Makefile has been
modified to no longer make this directory.

3) chrome/content/cat/opac.xul has been converted to a fully i18n-ized
file, by adding XML entities to web/opac/locale/en-US/lang.dtd and
converting hardcoded strings in the Javascript to stringbundle calls
that pull in the properties defined in cat.properties and
common.properties.

4) chrome/content/admin/survey* have also been given the entity &
stringbundle treatment.

I have tested the opac and survey screens in the cl

--- a/Open-ILS/web/opac/locale/en-US/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-US/lang.dtd
@@ -123,6 +123,17 @@
 <!ENTITY staff.au_survey_responses_label "Survey Responses">
 <!ENTITY staff.au_usrgroup_label "Usrgroup">
 <!ENTITY staff.au_usrname_label "Usrname">
+<!ENTITY staff.admin.survey.available.label "Available to:">
+<!ENTITY staff.admin.survey.description.label "Description:">
+<!ENTITY staff.admin.survey.end.label "End:">
+<!ENTITY staff.admin.survey.format.label "Poll Format:">
+<!ENTITY staff.admin.survey.name.label "Name:">
+<!ENTITY staff.admin.survey.opac_visible.label "OPAC Visible:">
+<!ENTITY staff.admin.survey.required.label "Required:">
+<!ENTITY staff.admin.survey.save_question.accesskey "q">
+<!ENTITY staff.admin.survey.save_question.label "Save this Question">
+<!ENTITY staff.admin.survey.staff_client.label "Staff Client:">
+<!ENTITY staff.admin.survey.start.label "Start:">
 <!ENTITY staff.auth.login_header "Login">
 <!ENTITY staff.auth.logoff_prompt "Log Off">
 <!ENTITY staff.auth.logoff_prompt.accesskey "f">
@@ -185,6 +196,34 @@
 <!ENTITY staff.cat.fixed.SER.key "S">
 <!ENTITY staff.cat.fixed.VIS "VIS">
 <!ENTITY staff.cat.fixed.VIS.key "V">
+<!ENTITY staff.cat.opac.add_bucket.accesskey "B">
+<!ENTITY staff.cat.opac.add_bucket.label "Add to Bucket">
+<!ENTITY staff.cat.opac.bib_in_new_tab.label "Duplicate in New Tab">
+<!ENTITY staff.cat.opac.copy_browse.accesskey "H">
+<!ENTITY staff.cat.opac.copy_browse.label "Holdings Maintenance">
+<!ENTITY staff.cat.opac.default.label "Set bottom interface as Default">
+<!ENTITY staff.cat.opac.marc_edit.accesskey "E">
+<!ENTITY staff.cat.opac.marc_edit.label "MARC Edit">
+<!ENTITY staff.cat.opac.marc_view.accesskey "V">
+<!ENTITY staff.cat.opac.marc_view.label "MARC View">
+<!ENTITY staff.cat.opac.mark_for_overlay.accesskey "M">
+<!ENTITY staff.cat.opac.mark_for_overlay.label "Mark for Overlay">
+<!ENTITY staff.cat.opac.menu.accesskey "A">
+<!ENTITY staff.cat.opac.menu.label "Actions for this Record">
+<!ENTITY staff.cat.opac.opac_view.accesskey "O">
+<!ENTITY staff.cat.opac.opac_view.label "OPAC View">
+<!ENTITY staff.cat.opac.record_end.accesskey "E">
+<!ENTITY staff.cat.opac.record_end.label "End">
+<!ENTITY staff.cat.opac.record_next.accesskey "N">
+<!ENTITY staff.cat.opac.record_next.label "Next">
+<!ENTITY staff.cat.opac.record_prev.accesskey "P">
+<!ENTITY staff.cat.opac.record_prev.label "Previous">
+<!ENTITY staff.cat.opac.record_start.accesskey "S">
+<!ENTITY staff.cat.opac.record_start.label "Start">
+<!ENTITY staff.cat.opac.refresh_me.label "Reset Display">
+<!ENTITY staff.cat.opac.remove_me.label "Remove this Frame">
+<!ENTITY staff.cat.opac.view_holds.accesskey "s">
+<!ENTITY staff.cat.opac.view_holds.label "View Holds">
 <!ENTITY staff.cat.popup.add_to_bucket "Add to Bucket">
 <!ENTITY staff.cat.popup.add_to_bucket.key "">
 <!ENTITY staff.cat.popup.browse.record.tab.key "">
