--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/common.properties
@@ -1,2 +1,6 @@
 common.exception=!! This software has encountered an error.  Please tell your friendly system administrator or software developer the following:\n%1$S\n%2$S\n
 common.jsan.missing=The JSAN library object is missing.
+common.ok=Ok
+common.clear=Clear
+common.confirm=Check here to confirm this message.
+common.error.default=Please report that this happened.
